<resources>
    <string name="app_name">OpenEyes</string>
    <string name="title_activity_list_place">ListPlace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="comfortableTransport">Зручний транспорт</string>

    <string name="review">Відгуки</string>
    <string name="goodLink">Корисна інформація</string>
    <string name="done">Готово</string>
    <string name="name">Назва</string>
    <string name="describe">Опис</string>
    <string name="adress">Адреса</string>
    <string name="title_activity_activ">activ</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_comfortable_place">Додати зручне місце</string>
    <string name="sign_in">Увійти</string>
    <string name="sign_up">Зареєструватись</string>
    <string name="email">Електронна пошта</string>
    <string name="password">Пароль</string>
    <string name="title_activity_add_new_comfotable_place">AddNewComfotablePlace</string>
    <string name="title_activity_login_page">Увійти</string>
    <string name="title_activity_registration_page">Зареєструватись</string>
    <string name="basicInformation">Загальна інформація</string>
    <string name="nameUser">Ім`я</string>
    <string name="category">Категорія</string>
    <string name="information">Інформація</string>
    <string name="title_activity_information_comfortable_place">InformationComfortablePlace</string>
    <string name="way_to_place">Прокласти маршут</string>
    <string name="theme">Тема</string>
    <string name="rating">Оцінка</string>
    <string name="send">Відправити</string>
    <string name="cancel">Скасувати</string>
    <string name="createComment">Додати відгук</string>
    <string name="exitUser">Вийти</string>
    <string name="title_activity_add_coment_for_place">AddComentForPlace</string>
    <string name="title_activity_list_place_map">ListPlaceMap</string>
    <string name="title_activity_add_lat_lng_place">AddLatLngPlace</string>
    <string name="addLatLng">Додати місцерозташуваня</string>
    <string name="showList">Відображення списком</string>
    <string name="showMap">Відображення на мапі</string>
    <string name="haveToilet">Обладнана вбиральня</string>
    <string name="haveRamp">Наявність пандусу</string>
    <string name="haveSwaddingTable">Наявність пеленального столу</string>
    <string name="haveElevator">Наявність ліфту</string>
    <string name="haveButtonHelp">Наявність кнопки виклику</string>
    <string name="terms">Умови</string>
    <string name="title_activity_list_comfortable_place">ListComfortablePlace</string>
    <string name="title_activity_comfortable_transport">Зручний транспорт</string>
    <string name="noComment">Немає коментарів</string>
    <string name="addInfromationFromGoogle">Додати інформацію з Google Maps</string>
    <string name="filture">Фільтр</string>
    <string name="shop">Магазини</string>
    <string name="hospital">Лікарні</string>
    <string name="cafe">Заклади харчування</string>
    <string name="culturePlace">Культурні місця</string>
    <string name="farmace">Аптеки</string>
    <string name="other">Інше</string>
    <string name="gasStation">AЗС</string>
    <string name="all">Всі</string>
    <string name="able">Застосувати</string>
    <string name="api_map_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCxPcUg-LhsMy1AWF0YixW0DtXpi-cCtkA</string>
    <string name="comfortablePlace">Зручні місця</string>
    <string name="apply">Застосувати</string>
    <string name="load">Завантаження</string>
    <string name="aboutUs">Про нас</string>
    <string name="title_activity_about_us">Про нас</string>
    <string name="whoWork">Над проектом працювали:</string>
    <string name="title_activity_good_link">Корисна інформація</string>
    <string name="title_activity_ramp">Яким повинен бути пандус</string>
    <string name="title_activity_get_ramp">Як отримати пандус</string>

</resources>
