<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuComfortableTransport"
            android:icon="@drawable/transport"
            android:title="@string/comfortableTransport" />
        <item
            android:id="@+id/menuComfortablePlace"
            android:icon="@drawable/place"
            android:title="@string/comfortablePlace" />
        <item
            android:id="@+id/navGoodLink"
            android:icon="@drawable/goodlink"
            android:title="@string/goodLink" />
        <item
            android:id="@+id/navAboutUs"
            android:icon="@drawable/about_us"
            android:title="@string/aboutUs" />
    </group>

    <item android:title="Налаштування">
        <menu>
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/exit_user"
                android:title="@string/exitUser"/>
        </menu>
    </item>

</menu>
