<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andriy.openeyes.FilturePlace">

   <android.support.constraint.ConstraintLayout
       android:layout_width="300dp"
       android:layout_height="450dp">

       <TextView
           android:id="@+id/textView7"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_marginEnd="8dp"
           android:layout_marginStart="8dp"
           android:layout_marginTop="8dp"
           android:text="@string/filture"
           android:textSize="25sp"
           android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <CheckBox

           android:id="@+id/checkBox"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginEnd="8dp"
           android:layout_marginStart="16dp"
           android:layout_marginTop="16dp"
           android:text="@string/all"
           android:textSize="18sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textView7" />

       <CheckBox
           android:id="@+id/checkBox2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginEnd="8dp"
           android:layout_marginStart="16dp"
           android:layout_marginTop="8dp"
           android:text="@string/gasStation"
           android:textSize="18sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/checkBox" />

       <CheckBox
           android:id="@+id/checkBox3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="8dp"
           android:text="@string/farmace"
           android:textSize="18sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

       <CheckBox
           android:id="@+id/checkBox4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="8dp"
           android:text="@string/shop"
           android:textSize="18sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

       <CheckBox
           android:id="@+id/checkBox5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="8dp"
           android:text="@string/cafe"
           android:textSize="18sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

       <CheckBox
           android:id="@+id/checkBox6"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="8dp"
           android:text="@string/hospital"
           android:textSize="18sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

       <CheckBox
           android:id="@+id/checkBox7"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="8dp"
           android:text="@string/culturePlace"
           android:textSize="18sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

       <CheckBox
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="8dp"
           android:text="@string/other"
           android:textSize="18sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

       <Button
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:textColor="@color/white"
           android:textSize="20sp"
           android:textStyle="bold"
           android:background="@color/buttonDone"
           android:text="@string/able"
           app:layout_constraintBottom_toBottomOf="parent" />
   </android.support.constraint.ConstraintLayout>
</FrameLayout>
